--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FULL NAME :: Project 2 :: SDI TERMNUMBER</title>
+    <title>Alec Shallenberger :: Project 2 :: SDI 1302</title>
     <link rel="stylesheet" href="sdi.css" type="text/css" />
     <meta charset="UTF-8">
 </head>
 <body>
 <header>
-    <h1>SDI TERMNUMBER: FULL NAME</h1>
+    <h1>SDI 1302: Alec Shallenberger</h1>
     <h2>Project 2</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
-<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
+<p>For the second part of the project I would like to expand my story, and go more into detail of what I mostly did in Georgia while I was up there. I am going to start off from the end of my first project story and tell everyone what I decided to do after I got to Georgia. I am also going to explain how I got from place to place. Furthermore, I am going to explain the details on how much food I could of eaten and what restaurants I ate at. </p>
+
 </article>
 <footer>
-    <p>COMPLETION DATE, FULL NAME</p>
+    <p>February 16, 2013, Alec Shallenberger </p>
 </footer>
-<script type="text/javascript" src="rename-me.js"></script>
+<script type="text/javascript" src="Shallenberger_Alec_assignment2.js"></script>
 </body>
 </html>
