Modified my HTML file changed and re-wrote it.

--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -11,7 +11,8 @@
     <h2>Project 2</h2>
 </header>
 <article>
-<p>For the second part of the project I would like to expand my story, and go more into detail of what I mostly did in Georgia while I was up there. I am going to start off from the end of my first project story and tell everyone what I decided to do after I got to Georgia. I am also going to explain how I got from place to place. Furthermore, I am going to explain the details on how much food I could of eaten and what restaurants I ate at. </p>
+<p>For the second part of the project I wanted to extend my story in telling everyone what I did when I finally arrived to Georgia. In which I decided to watch TV. I had a couple choices I could choose from and the ones in the project are the ones.</p>
+<p> One thing I can make clear in the project is when I did the while loop and the for loop I decided to use the minutes from the show. The purpose of that was to have it count down the minutes till the show was over. 
 
 </article>
 <footer>
